--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@
   <h1><p>saya sedang belajar web</p></h1>
   <l><u><o>saya belajar web</o></u></l>
 </body>
+<body style="background-color: #f472b6";>
+</body>
+</html>
