--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Rsha</title>
 </head>
 <body>
-  <a href="profil/profil.html">Profil</a>
-  <a href="tentang/tentang.html">Tentang</a>
-  <a href="beranda/beranda.html">Beranda</a>
+  <a href="Profil/profil.html">Profil</a>
+  <a href="Tentang/tentang.html">Tentang</a>
+  <a href="Beranda/beranda.html">Beranda</a>
   
   
   <h1>saya belajar web</h1>
@@ -21,7 +21,6 @@
   <p>saya sedang belajar web</p>
   <h1><p>saya sedang belajar web</p></h1>
   <l><u><o>saya belajar web</o></u></l>
-</body>
 <body style="background-color: #f472b6";>
 </body>
 </html>
