--- a/Profil/profil.html
+++ b/Profil/profil.html
@@ -13,13 +13,13 @@
   <h2>Tanggal Lahir:21-01-2010</h2>
   
   <h2>Foto saya</h2>
-  <img src="../assets/img/foto.jpg" height="400" width="300">
+  <img src="../Assets/Img/foto.jpg" height="400" width="300">
   
     <h2>Video saya</h2>
-    <video src="../assets/Video.mp4" height="200" width="200" controls="controls" autoplay="autoplay"></video>
+    <video src="../Assets/Video.mp4" height="200" width="200" controls="controls" autoplay="autoplay"></video>
     
     <h3>audio saya</h3>
     <audio controls autoplay>
-      <source src="../assets/music.mp3" type="audio/mp3"> </audio>
+      <source src="../Assets/music.mp3" type="audio/mp3"> </audio>
 </body>
 </html>
